<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/principal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:background="@drawable/white_card">

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/logo_Description"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/nombreDoc"
            android:layout_width="214dp"
            android:layout_height="42dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bordes_redondos"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celular"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/celularDoc"
            android:layout_width="214dp"
            android:layout_height="42dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bordes_redondos"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocupacion"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/ocupacionDoc"
            android:layout_width="214dp"
            android:layout_height="42dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bordes_redondos"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/password4"
            android:layout_width="214dp"
            android:layout_height="42dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bordes_redondos"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/save2"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="125dp"
            android:backgroundTint="@color/green"
            android:text="@string/guardar"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/atras"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="125dp"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>
</LinearLayout>